# MARIA-Fortran

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: add_new_test.cmake  prevent_in_source_build.cmake
doc/: ford.md
src/: CMakeLists.txt
src/access/access_matrix/: CMakeLists.txt  access_matrix_mod.f90
src/access/access_tensor/: CMakeLists.txt  access_tensor_mod.f90
src/common/: CMakeLists.txt
src/common/argcheck/: CMakeLists.txt  argcheck_mod.f90
src/common/arr/: CMakeLists.txt  arr_mod.f90
src/common/assert/: CMakeLists.txt  assert_mod.f90  maria_assert_mod.h
src/common/comparison/: CMakeLists.txt  comparison_mod.f90
src/common/constants/: CMakeLists.txt  constants_mod.f90
src/common/kinds/: CMakeLists.txt  kinds_mod.f90
src/common/prng/: CMakeLists.txt  prng_builtin_mod.f90  prng_mkl_mod.f90  prng_mod.f90
src/common/prng/sub/: prng_builtin_sub.f90  prng_mkl_sub.f90
src/common/reports/: CMakeLists.txt  reports_mod.f90
src/common/utils/: CMakeLists.txt  utils_mod.f90
src/la/: CMakeLists.txt
src/la/la_core/: CMakeLists.txt  blas1_mod.f90  blas2_mod.f90  blas3_mod.f90  la_core_mod.f90  lapack_mod.f90
src/la/la_core/sub/: la_core_sub.f90
src/la/la_utils/: CMakeLists.txt  la_utils_mod.f90
src/lr/: CMakeLists.txt
src/lr/lr_cross/: CMakeLists.txt  lr_cross_mod.f90
src/lr/lr_geom/: CMakeLists.txt  lr_geom_mod.f90
src/lr/lr_la/: CMakeLists.txt  lr_la_mod.f90
src/lr/lr_maxvol/: CMakeLists.txt  lr_maxvol_mod.f90
src/lr/lr_tsvd/: CMakeLists.txt  lr_tsvd_mod.f90
src/tt/tt_tsvd/: CMakeLists.txt  tt_tsvd_mod.f90
src/tt/tt_utils/: CMakeLists.txt  tt_utils_mod.f90
test/: CMakeLists.txt
test/access/: CMakeLists.txt
test/access/access_matrix/: CMakeLists.txt  dmatval2full_test.f90  dmatval2slc_test.f90  smatval2full_test.f90  smatval2slc_test.f90
test/access/access_tensor/: CMakeLists.txt  dtenval2fib_test.f90  dtenval2full_test.f90  i2mi_test.f90  mi2i_test.f90  stenval2fib_test.f90  stenval2full_test.f90
test/common/: CMakeLists.txt
test/common/argcheck/: CMakeLists.txt  darg_is_bad_test.f90  iarg_is_bad_test.f90  sarg_is_bad_test.f90
test/common/comparison/: CMakeLists.txt  dsafe_eq_test.f90  dsafe_leq_test.f90  dsafe_less_test.f90  ssafe_eq_test.f90  ssafe_leq_test.f90  ssafe_less_test.f90
test/common/prng/: CMakeLists.txt  dnormal_test.f90  duniform_test.f90  iuniform_test.f90  snormal_test.f90  suniform_test.f90
test/common/utils/: CMakeLists.txt  darange_test.f90  dare_close_test.f90  dlinspace_test.f90  doptional_val_test.f90  drealloc_test.f90  dswap_pair_test.f90  iarange_test.f90  imedian_of_3_test.f90  ioptional_val_test.f90  ipermute_test.f90  iselect_no_replacement_test.f90  isort_test.f90  iswap_pair_test.f90  loptional_val_test.f90  sarange_test.f90  sare_close_test.f90  slinspace_test.f90  soptional_val_test.f90  srealloc_test.f90  sswap_pair_test.f90
test/la/la_core/: CMakeLists.txt  ddgmm_test.f90  dgedotf_test.f90  dgenrmc_test.f90  dgenrmf_test.f90  dgepiv_test.f90  dgescal_test.f90  dgesdd_q_test.f90  dorcangles_test.f90  droundup_lwork_test.f90  sdgmm_test.f90  sgedotf_test.f90  sgenrmc_test.f90  sgenrmf_test.f90  sgepiv_test.f90  sgescal_test.f90  sgesdd_q_test.f90  sorcangles_test.f90  sroundup_lwork_test.f90
test/la/la_utils/: CMakeLists.txt  dall_close_test.f90  dall_const_test.f90  dgeall_close_test.f90  dgeall_const_test.f90  drandort_test.f90  drandsvd_test.f90  sall_close_test.f90  sall_const_test.f90  sgeall_close_test.f90  sgeall_const_test.f90  srandort_test.f90  srandsvd_test.f90
test/lr/lr_cross/: CMakeLists.txt  dmatcross_aca_test.f90  dmatcross_test.f90  dmatcross_top_test.f90  smatcross_aca_test.f90  smatcross_test.f90  smatcross_top_test.f90
test/lr/lr_geom/: CMakeLists.txt  dlrdotf_tangent_test.f90  dlrproj_tangent_test.f90  dlrretr_tangent_test.f90  slrdotf_tangent_test.f90  slrproj_tangent_test.f90  slrretr_tangent_test.f90
test/lr/lr_la/: CMakeLists.txt  dlr2full_test.f90  dlrdotf_test.f90  dlrnrmf_diff_test.f90  dlrnrmf_test.f90  dlrort_test.f90  dlrsvd_ort_test.f90  dlrval_test.f90  lrort_rank_test.f90  slr2full_test.f90  slrdotf_test.f90  slrnrmf_diff_test.f90  slrnrmf_test.f90  slrort_test.f90  slrsvd_ort_test.f90  slrval_test.f90
test/lr/lr_maxvol/: CMakeLists.txt  dgemaxvol_proj_test.f90  dgemaxvol_rect_add_rows_test.f90  dgemaxvol_rect_swap_cols_test.f90  dgemaxvol_rect_swap_rows_test.f90  dgemaxvol_swap_rows_test.f90  dgemaxvol_test.f90  dgevolume_test.f90  sgemaxvol_proj_test.f90  sgemaxvol_test.f90  (+5 more)
test/tt/: CMakeLists.txt
(+29 files in other folders)
